<resources>
    <string name="app_name">MovieApp</string>
    <string name="snackbar_loading_text">Секундочку, гружусь…</string>
    <string name="snackbar_con_error_text">Не могу загрузить данные.\nПроверьте соединение с интернетом.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kinopoisk_rating_string">Рейтинг кинопоиска:</string>
    <string name="try_again_button_text">Повторить попытку</string>
    <string name="error_try_again_text">Не удалось загрузить данные</string>
    <string name="snackbar_server_error_text">Сервер временно недоступен.\nПовторите попытку позже."</string>
    <string name="menu_item_movies">Фильмы</string>
    <string name="menu_item_search">Поиск</string>
    <string name="votes_number_text">Оценок:</string>
    <string name="hint_search">Введите название фильма</string>
    <string name="menu_item_favourite">Избранное</string>
    <string name="menu_item_cinema">Кинотеатры</string>
    <string name="nothing_found_text">Ничего не найдено</string>
    <string name="welcome_search_text">Введите запрос</string>
    <string name="nothing_added_to_favourite">Ничего не добавлено</string>
    <string name="films_to_watch_text">Что посмотреть</string>
</resources>