<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/movieFragment"
        android:icon="@drawable/movie_screen_icon"
        android:title="@string/menu_item_movies"
        app:showAsAction="always"/>

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/search_screen_icon"
        android:title="@string/menu_item_search"
        app:showAsAction="always"/>

    <item
        android:id="@+id/favouriteMoviesFragment"
        android:icon="@drawable/favourite_screen_icon"
        android:title="@string/menu_item_favourite"
        app:showAsAction="always"/>

    <item
        android:id="@+id/cinemaTabsFragment"
        android:icon="@drawable/cinema_screen_icon"
        android:title="@string/menu_item_cinema"
        app:showAsAction="always"/>

</menu>