<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.screens.SearchFragment">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view_movie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_2x"
        android:layout_marginBottom="@dimen/space_2x"
        android:layout_marginEnd="@dimen/space_4x"
        android:layout_marginStart="@dimen/space_4x"
        android:background="@drawable/search_view_background"
        android:theme="@style/CustomSearchViewStyle"
        app:queryHint="@string/hint_search"
        app:iconifiedByDefault="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/recyclerView_movies_search"
        app:searchIcon="@drawable/search_icon"
        app:closeIcon="@drawable/search_close_icon"/>

    <LinearLayout
        android:id="@+id/nothing_search_layout"
        android:visibility="invisible"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_view_movie"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:src="@drawable/searching_image"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/nameOfFilmTextColor"
            android:text="@string/nothing_found_text"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar_movies_search"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:indeterminateTint="@color/refreshRingColor"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <LinearLayout
        android:id="@+id/error_movies_search_layout"
        android:visibility="invisible"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/nameOfFilmTextColor"
            android:text="@string/error_try_again_text"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/try_again_button_movies_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_again_button_text"
            style="@style/Widget.Material3.Button.TextButton"
            android:textSize="16sp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/refreshRingColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_movies_search"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_view_movie"/>

</androidx.constraintlayout.widget.ConstraintLayout>